# media_organizer

./: .env  .gitignore  Cargo.toml  diesel.toml
migrations/2025-01-04-001122_create_track_files/: down.sql  up.sql
src/: lib.rs  main.rs  media_organizer.rs  models.rs  schema.rs
