[package]
name = "media_organizer"
version = "0.1.0"
edition = "2021"

[dependencies]
diesel = { version = "2.2.0", features = ["sqlite", "returning_clauses_for_sqlite_3_35"] }
sanitize-filename = "0.6.0"
dotenvy = "0.15.7"
lofty = "0.21.1"
reqwest = { version = "0.12.12", features = ["json"] }
serde_json = "1.0.134"
tokio = { version = "1.0.0", features = ["rt", "rt-multi-thread", "macros"] }
strsim = "0.11.1"
chrono = "0.4.39"
musicbrainz_rs = "0.5.0"